fix: camera stream being too small

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -136,8 +136,8 @@ footer {
 }
 
 .camera-stream img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
